--- a/project_basic_git.ipynb
+++ b/project_basic_git.ipynb
@@ -171,7 +171,7 @@
     "    def reopen_connection(self): # переоткрытие соединения\n",
     "        try:\n",
     "            self.connection = psycopg2.connect(database=self.__database, \n",
-    "                                                   user=self.__postgres, \n",
+    "                                                   user=self.__user, \n",
     "                                               password=self.__password,\n",
     "                                                   host=self.__host, \n",
     "                                                   port=self.__port)\n",
